[gd_scene load_steps=4 format=3 uid="uid://dr2oc7bntqt0d"]

[ext_resource type="Script" uid="uid://c8baydayq5w18" path="res://credits.gd" id="1_g4wvt"]
[ext_resource type="Texture2D" uid="uid://dqxw5vlmkiihn" path="res://assets/kfpbackground.png" id="1_nm7lk"]
[ext_resource type="Theme" uid="uid://uqt4q735a5i" path="res://MainTheme.tres" id="2_pjc1l"]

[node name="Credits" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g4wvt")

[node name="Background" type="TextureRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_nm7lk")
stretch_mode = 1

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -443.0
offset_top = -350.5
offset_right = 443.0
offset_bottom = 350.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_pjc1l")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 80

[node name="Credits" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[font_size=45]
[u]Test[/u]

[font_size=30][b]Test[/b][/font_size]

[/font_size]"
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Credits"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -402.5
offset_top = -301.5
offset_right = 402.5
offset_bottom = 301.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
color = Color(0.435294, 0.270588, 0.219608, 1)

[node name="BackButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="mouse_entered" from="PanelContainer/MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_mouse_entered"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
